--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "js-cookie": "^3.0.5",
-    "next": "^15.1.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.8"
+    "eslint-config-next": "^16.0.10"
   }
 }
